# Embedded-Control

./: CMakeLists.txt  CMakePresets.json  Makefile
Swerve-Standard/: CMakeLists.txt
Template/: CMakeLists.txt
control-base/: CMakeLists.txt
control-base/typec-board-base/: .mxproject  CMakeLists.txt
control-base/typec-board-base/cmake/: gcc-arm-none-eabi.cmake
control-base/typec-board-base/cmake/stm32cubemx/: CMakeLists.txt
